drawing bug fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,5 @@ set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_CXX_STANDARD 17)
 project(ft_linear_regression LANGUAGES CXX)
 add_executable(linear_rg main.cpp LinearRegression.cpp PlotAutoscale.cpp)
+add_executable(predict main_predict.cpp LinearRegression.cpp PlotAutoscale.cpp)
+add_executable(train main_train.cpp LinearRegression.cpp PlotAutoscale.cpp)
